# fletbox

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
fletbox/: __init__.py  buttons.py  choices.py  dialogs.py  displays.py  events.py  helpers.py  inputs.py  menus.py  options.py  tables.py  tabs.py
